--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@ body {
   min-height: 100vh;
 }
 .card {
-  max-width: 20rem;
+  max-width: 23rem;
   padding: 1rem;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
   border-radius: 10px;
 }
 .img1 {
@@ -30,11 +31,12 @@ body {
   border-radius: 10px;
 }
 .title {
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: 700;
   text-align: center;
   font-family: "outfit";
   margin: 5px;
+  color: hsl(218, 44%, 22%);
 }
 .description {
   font-size: 1rem;
